Add Windows wasm build ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -412,6 +412,7 @@ jobs:
                 -DLLVM_ENABLE_ZSTD=OFF                             `
                 -DLLVM_ENABLE_TERMINFO=OFF                         `
                 -DLLVM_ENABLE_LIBXML2=OFF                          `
+                -DLLVM_ENABLE_ZLIB=OFF                             `
                 ..\llvm
           cmake --build . --config Release --target lld --parallel ${{ env.ncpus }}
           cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
@@ -446,6 +447,7 @@ jobs:
                 -DLLVM_ENABLE_ZSTD=OFF                              `
                 -DLLVM_ENABLE_TERMINFO=OFF                          `
                 -DLLVM_ENABLE_LIBXML2=OFF                           `
+                -DLLVM_ENABLE_ZLIB=OFF                             `
                 ..\llvm
           cmake --build . --config Release --target clang clang-repl lld --parallel ${{ env.ncpus }}
         }
@@ -1151,6 +1153,27 @@ jobs:
             cling: On
             cling-version: '1.0'
             micromamba_shell_init: bash
+          - name: win2022-msvc-clang-repl-18-emscripten_wasm
+            os: windows-2022
+            compiler: msvc
+            clang-runtime: '18'
+            cling: Off
+            cppyy: Off
+            micromamba_shell_init: powershell
+          - name: win2022-msvc-clang-repl-17-emscripten_wasm
+            os: windows-2022
+            compiler: msvc
+            clang-runtime: '17'
+            cling: Off
+            cppyy: Off
+            micromamba_shell_init: powershell
+          - name: win2022-msvc-clang-repl-16-emscripten_wasm
+            os: windows-2022
+            compiler: msvc
+            clang-runtime: '16'
+            cling: Off
+            cppyy: Off
+            micromamba_shell_init: powershell
 
     steps:
     - uses: actions/checkout@v4
@@ -1183,6 +1206,34 @@ jobs:
         echo "CLING_HASH=$CLING_HASH" >> $GITHUB_ENV
         echo "LLVM_HASH=$LLVM_HASH" >> $GITHUB_ENV
 
+    - name: Save PR Info on Windows systems
+      if: ${{ runner.os == 'windows' }}
+      run: |
+        #can be found
+        mkdir  ./pr
+        echo "${{ github.event.number }}" > ./pr/NR
+        echo ${{ github.repository }} > ./pr/REPO
+
+        if ( "${{ matrix.cling }}" -imatch "On" )
+        { 
+          $env:CLING_HASH_TEMP = ( git ls-remote https://github.com/root-project/cling.git refs/tags/v${{ matrix.cling-version }} ) 
+          $env:CLING_HASH = $env:CLING_HASH_TEMP -replace "\t","-"
+        }
+        else
+        {
+          $env:CLING_HASH="Repl"
+          # May need to revert back to both having same llvm_hash, as below cause llvm to be rebuilt everytime commit is made to llvm/llvm-project for release a.x
+          # which could be quite often for new releases
+          $env:LLVM_HASH_TEMP = (git ls-remote https://github.com/llvm/llvm-project.git refs/heads/release/${{ matrix.clang-runtime}}.x )
+          $env:LLVM_HASH = $env:LLVM_HASH_TEMP -replace "\t","-"
+        }
+
+        echo "CLING_HASH=$env:CLING_HASH"
+        echo "LLVM_HASH=$env:LLVM_HASH"
+        
+        echo "CLING_HASH=$env:CLING_HASH" >> $GITHUB_ENV
+        echo "LLVM_HASH=$env:LLVM_HASH" >> $GITHUB_ENV
+
     - name: Setup default Build Type on *nux
       if: runner.os != 'windows'
       run: |
@@ -1195,6 +1246,61 @@ jobs:
           echo "ncpus=$(nproc --all)" >> $GITHUB_ENV
         fi
 
+    - name: Setup default Build Type on Windows
+      if: runner.os == 'windows'
+      run: |
+        echo "BUILD_TYPE=Release" >> $env:GITHUB_ENV
+        echo "CODE_COVERAGE=0" >>  $env:GITHUB_ENV
+        $env:ncpus=$([Environment]::ProcessorCount) 
+        echo "ncpus=$env:ncpus" >> $env:GITHUB_ENV
+
+    - name: Setup Envirnoment variables Windows
+      if: runner.os == 'windows'
+      run: |
+        $env:EMPACK_PREFIX="C:\Users\runneradmin\micromamba\envs\CppInterOp-wasm-build"
+        $env:PREFIX="C:\Users\runneradmin\micromamba\envs\CppInterOp-wasm-build"
+        $env:CMAKE_PREFIX_PATH="$env:PREFIX"
+        $env:CMAKE_SYSTEM_PREFIX_PATH="$env:PREFIX"
+
+        $env:PWD_DIR= $PWD.Path
+        
+        $env:LLVM_DIR="$env:PWD_DIR\llvm-project"
+        echo "LLVM_DIR=$env:LLVM_DIR"
+        echo "LLVM_DIR=$env:LLVM_DIR" >> $env:GITHUB_ENV
+
+        $env:LLVM_BUILD_DIR="$env:PWD_DIR\llvm-project\build"
+        echo "LLVM_BUILD_DIR=$env:LLVM_BUILD_DIR"
+        echo "LLVM_BUILD_DIR=$env:LLVM_BUILD_DIR" >> $env:GITHUB_ENV
+        
+        if ( "${{ matrix.cling }}" -imatch "On" )
+        {
+          $env:CLING_DIR="$env:PWD_DIR\cling"
+          echo "CLING_DIR=$env:CLING_DIR"
+          echo "CLING_DIR=$env:CLING_DIR" >> $env:GITHUB_ENV   
+          
+          $env:CLING_BUILD_DIR="$env:PWD_DIR\cling\build"
+          echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR"
+          echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR" >> $env:GITHUB_ENV   
+      
+          $env:CPLUS_INCLUDE_PATH="$env:CLING_DIR\tools\cling\include;$env:CLING_BUILD_DIR\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
+          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
+          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV   
+        }
+        else
+        {
+          $env:CPLUS_INCLUDE_PATH="$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
+          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
+          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV   
+        }
+        
+        $env:CB_PYTHON_DIR="$env:PWD_DIR\cppyy-backend\python"
+        echo "CB_PYTHON_DIR=$env:CB_PYTHON_DIR"
+        echo "CB_PYTHON_DIR=$env:CB_PYTHON_DIR" >> $env:GITHUB_ENV  
+
+        $env:CPPINTEROP_DIR="$env:CB_PYTHON_DIR\cppyy-backend"
+        echo "CPPINTEROP_DIR=$env:CPPINTEROP_DIR"
+        echo "CPPINTEROP_DIR=$env:CPPINTEROP_DIR" >> $env:GITHUB_ENV  
+        
     - name: Install deps on Linux
       if: runner.os == 'Linux'
       run: |
@@ -1212,10 +1318,17 @@ jobs:
           ${{ matrix.micromamba_shell_init }}
         environment-name: CppInterOp-wasm-build
 
+    - name: micromamba shell hook
+      if: ${{ runner.os == 'windows' }}
+      shell: powershell
+      run: |
+          micromamba shell hook -s cmd.exe -p C:\Users\runneradmin\micromamba-root
+
     - name: Setup emsdk
+      if: ${{ runner.os != 'windows' }}
       shell: bash -l {0}
       run: |
-        emsdk install 3.1.45     
+        emsdk install 3.1.45      
 
     - name: Restore Cache LLVM/Clang runtime build directory
       uses: actions/cache/restore@v4
@@ -1297,7 +1410,47 @@ jobs:
         echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
         echo "PREFIX=$PREFIX" >> $GITHUB_ENV
 
+    - name: Build and Test/Install CppInterOp on Windows systems
+      shell: powershell
+      if: ${{ runner.os == 'windows' }}
+      run: |
+        micromamba activate CppInterOp-wasm-build
+        Set-Alias -Name python3 -Value python
+        git clone https://github.com/emscripten-core/emsdk.git
+        cd emsdk
+        .\emsdk.bat install 3.1.45
+        .\emsdk.bat activate 3.1.45
+        cd ..
+        mkdir build 
+        cd build
+        if ( "${{ matrix.cling }}" -imatch "On" )
+        {
+          ..\emsdk\upstream\emscripten\emcmake cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    `
+                -DUSE_CLING=ON                                  `
+                -DUSE_REPL=OFF                                  `
+                -DCMAKE_PREFIX_PATH=$env:PREFIX                      `
+                -DCMAKE_INSTALL_PREFIX=$env:PREFIX      `
+                -DCling_DIR="$env:LLVM_BUILD_DIR\tools\cling"   `
+                -DLLVM_DIR="$env:LLVM_BUILD_DIR\lib\cmake\llvm" `
+                -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON            `
+                -DClang_DIR="$env:LLVM_BUILD_DIR\lib\cmake\clang"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }} -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
+        }
+        else
+        {
+          ..\emsdk\upstream\emscripten\emcmake cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    `
+                -DUSE_CLING=OFF                             `
+                -DUSE_REPL=ON                               `
+                -DCMAKE_PREFIX_PATH=$env:PREFIX                      `
+                -DCMAKE_INSTALL_PREFIX=$env:PREFIX      `
+                -DLLVM_DIR="$env:LLVM_BUILD_DIR\lib\cmake\llvm"  `
+                -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON            `
+                -DClang_DIR="$env:LLVM_BUILD_DIR\lib\cmake\clang"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}  -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
+        }
+        ..\emsdk\upstream\emscripten\emmake make -j ${{ env.ncpus }}
+        cd ..
+
     - name: Build xeus-cpp
+      if: ${{ runner.os != 'windows' }}
       shell: bash -l {0}
       run: |
         emsdk activate 3.1.45
