--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,12 +432,12 @@ jobs:
                 -DLLVM_ENABLE_LIBXML2=OFF                          `
                 -DLLVM_ENABLE_ZLIB=OFF                             `
                 ..\llvm
-          cmake --build . --config Release --target lld --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target cxx --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target cling --parallel ${{ env.ncpus }}
+          cmake --build . --config Release --target lld --parallel $env:ncpus
+          cmake --build . --config Release --target clang --parallel $env:ncpus
+          cmake --build . --config Release --target cxx --parallel $env:ncpus
+          cmake --build . --config Release --target cling --parallel $env:ncpus
           # Now build gtest.a and gtest_main for CppInterOp to run its tests.
-          cmake --build . --config Release --target gtest_main --parallel ${{ env.ncpus }}
+          cmake --build . --config Release --target gtest_main --parallel $env:ncpus
         }
         else
         {
@@ -469,8 +469,8 @@ jobs:
                 -DLLVM_ENABLE_LIBXML2=OFF                           `
                 -DLLVM_ENABLE_ZLIB=OFF                             `
                 ..\llvm
-          cmake --build . --config Release --target clang clang-repl lld --parallel $env::ncpus
-          cmake --build . --config Release --target cxx --parallel $env::ncpus
+          cmake --build . --config Release --target clang clang-repl lld --parallel $env:ncpus
+          cmake --build . --config Release --target cxx --parallel $env:ncpus
         }
         cd ..\
         rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name "libcxx" ! -name ".")
@@ -1454,11 +1454,13 @@ jobs:
       shell: powershell
       if: ${{ runner.os == 'windows' }}
       run: |
+        choco install ninja
         mkdir build 
         cd build
         if ( "${{ matrix.cling }}" -imatch "On" )
         {
                 cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} `   
+                -G "Ninja" `
                 -DUSE_CLING=ON                                  `
                 -DUSE_REPL=OFF                                  `
                 -DUSE_WASM=ON `
@@ -1472,6 +1474,7 @@ jobs:
         else
         {
                 cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    `
+                -G "Ninja" `
                 -DUSE_CLING=OFF                             `
                 -DUSE_REPL=ON                               `
                 -DUSE_WASM=ON `
@@ -1481,7 +1484,7 @@ jobs:
                 -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON           `
                 -DClang_DIR="$env:LLVM_BUILD_DIR\lib\cmake\clang"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}  -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
         }
-        cmake --build . --parallel $env.ncpus
+        ninja
         cd ..
 
     - name: Build xeus-cpp
