--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1303,13 +1303,13 @@ jobs:
           echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR"
           echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR" >> $env:GITHUB_ENV   
       
-          $env:CPLUS_INCLUDE_PATH="C:\Program Files\LLVM\include;$env:LLVM_DIR\libcxx\include;$env:CLING_DIR\tools\cling\include;$env:CLING_BUILD_DIR\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
+          $env:CPLUS_INCLUDE_PATH="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.29.30133\include;C:\Program Files\LLVM\include;$env:LLVM_DIR\libcxx\include;$env:CLING_DIR\tools\cling\include;$env:CLING_BUILD_DIR\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
           echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
           echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV   
         }
         else
         {
-          $env:CPLUS_INCLUDE_PATH="C:\Program Files\LLVM;$env:LLVM_DIR\libcxx\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
+          $env:CPLUS_INCLUDE_PATH="C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.29.30133\include;C:\Program Files\LLVM;$env:LLVM_DIR\libcxx\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
           echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
           echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV   
         }
@@ -1330,8 +1330,7 @@ jobs:
       run: |
         if ( "${{ matrix.compiler }}" -imatch "clang" )
         {
-          $ver="${{ matrix.compiler }}".split("-")[1]
-          choco install llvm --version=$ver --force 
+          choco install llvm 
           clang --version
           #
           $env:CC="clang"
