Fix clang tidy workflow

--- a/.github/workflows/clang-tidy-review.yml
+++ b/.github/workflows/clang-tidy-review.yml
@@ -23,9 +23,9 @@ jobs:
           python-version: "3.11"
 
       - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2.0.2
+        uses: KyleMayes/install-llvm-action@v2.0.3
         with:
-          version: "16.0.0"
+          version: "17.0.6"
 
       - name: install lit
         run: pip install lit
@@ -37,8 +37,11 @@ jobs:
           build_dir: build
           apt_packages: cmake,libxml2,libxml2-dev,libtinfo-dev,zlib1g-dev,libzstd-dev
           split_workflow: true
+          config_file: .clang-tidy
           cmake_command: >
             cmake . -B build -DCMAKE_BUILD_TYPE="Release"
+            -DCMAKE_C_COMPILER="$GITHUB_WORKSPACE/llvm/bin/clang"
+            -DCMAKE_CXX_COMPILER="$GITHUB_WORKSPACE/llvm/bin/clang++"
             -DUSE_CLING=OFF
             -DUSE_REPL=ON
             -DLLVM_DIR="$GITHUB_WORKSPACE/llvm"
