--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -16,6 +16,7 @@ add_cppinterop_unittest(CppInterOpTests
 target_link_libraries(CppInterOpTests
   PRIVATE
   clangCppInterOp
+  libclang
   )
 
 if(NOT WIN32)
